Fix: Hero Section not showing up on mobile

--- a/final-portfolio/style.css
+++ b/final-portfolio/style.css
@@ -593,10 +593,6 @@ footer {
         display: block;
         color: var(--main-bg);
     }
-
-    #hero {
-        height: 500px;
-    }
     
     #hero .text-container .text-change span::after {
         font-size: 23px;
